--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".FirstStartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
         <activity android:name=".BufferActivity"/>
         <activity android:name=".guide.GuideActivity"/>
         <activity android:name=".MainActivity"/>
-        <activity android:name=".activity.indexlunbo.TopLunboActivity"/>
+        <activity android:name=".activity.taotaotiantang.TaoTaoTianTangActivity"/>
     </application>
 
 </manifest>
