--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     testCompile 'junit:junit:4.12'
     compile files('libs/Volley.jar')
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:design:26.0.0-alpha1'
 }
