--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".guide.GuideActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".activity.taotaotiantang.TaoTaoTianTangActivity" android:theme="@style/notitleBar"/>
+        <activity android:name=".activity.xianshiqiang.FlashSalectivity" android:theme="@style/notitleBar"/>
     </application>
 
 </manifest>
